fix: broken ui

--- a/wonderlend-fe/src/app/Overlay.module.css
+++ b/wonderlend-fe/src/app/Overlay.module.css
@@ -3,8 +3,8 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    height: 200vh;
+    overflow: hidden;
     background-color: rgba(0,0,0,0.7);
     z-index: 99999;
   }
